--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>testAccount</name>
-  
+<!--test-->  
   
   	<dependencies>
 		<dependency>
